--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,26 +1,23 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Outfit:wght@100..900&display=swap');
-
-
-@custom-variant dark (&:where(.dark, .dark *));
-
-
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
 @import "tailwindcss";
 
-*{
-  font-family: "Outfit", sans-serif;
-}
+@custom-variant dark (&:where(.dark, .dark *)); 
 
+*{
+   font-family: "Outfit", sans-serif;
+}
 @theme {
-  --color-primary: #E6CCFF ;
+  --color-primary: #E6CCFF;
 }
 ::-webkit-scrollbar {
-  display: none;
+    display: none;
 }
 
 .reset-tw :not(pre):not(code){
   all: revert;
 }
+
 .loader div:nth-child(2){
   animation-delay: 0.2s;
 }
